tests/ui/asm/avr/bad-reg.avr.stderr
error: invalid register `Y`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:19:18
   |
LL |         asm!("", out("Y") _);
   |                  ^^^^^^^^^^

error: invalid register `YL`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:21:18
   |
LL |         asm!("", out("YL") _);
   |                  ^^^^^^^^^^^

error: invalid register `YH`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:23:18
   |
LL |         asm!("", out("YH") _);
   |                  ^^^^^^^^^^^

error: invalid register `SP`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:25:18
   |
LL |         asm!("", out("SP") _);
   |                  ^^^^^^^^^^^

error: invalid register `SPL`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:27:18
   |
LL |         asm!("", out("SPL") _);
   |                  ^^^^^^^^^^^^

error: invalid register `SPH`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:29:18
   |
LL |         asm!("", out("SPH") _);
   |                  ^^^^^^^^^^^^

error: invalid register `r0`: LLVM reserves r0 (scratch register) and r1 (zero register)
  --> $DIR/bad-reg.rs:31:18
   |
LL |         asm!("", out("r0") _);
   |                  ^^^^^^^^^^^

error: invalid register `r1`: LLVM reserves r0 (scratch register) and r1 (zero register)
  --> $DIR/bad-reg.rs:33:18
   |
LL |         asm!("", out("r1") _);
   |                  ^^^^^^^^^^^

error: invalid register `r1r0`: LLVM reserves r0 (scratch register) and r1 (zero register)
  --> $DIR/bad-reg.rs:35:18
   |
LL |         asm!("", out("r1r0") _);
   |                  ^^^^^^^^^^^^^

error: aborting due to 9 previous errors

